--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="landing-secttion">
     <header class="header">
       <nav class="navbar">
-        <h2 class="logo"><a href="#">FAHIM Islam</a></h2>
+        <h2 class="logo"><a href="#">FAHIM Afnan</a></h2>
         <input type="checkbox" id="menu-toggle" />
         <label for="menu-toggle" id="hamburger-btn">
           <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
@@ -36,7 +36,7 @@
         <p>
           Join us in the exciting world of programming and turn your ideas into
           reality. Unlock the world of endless possibilities - learn to code and
-          shape the digital future with us.
+          shape the digital future with us. Changed after uploading on github.
         </p>
         <div class="buttons">
           <a href="#" class="join">Join Now</a>
